web-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-netpol
spec:
  podSelector:
    matchLabels:
      app: api
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from: []
    ports:
     - port: 80
       protocol: TCP
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: api
  - to:
    - namespaceSelector:
        matchLabels:
          namespace: kube-system
    - podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
     - port: 53
       protocol: UDP
